# fastapi_adk_practice

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
backend/: app.py
backend/models/: __init__.py  api_models.py  data_models.py  database_models.py
backend/routes/: __init__.py  inventory_routes.py  login_routes.py  orders_routes.py  products_routes.py  sales_routes.py  suppliers_routes.py
backend/utils/: __init__.py  auth.py  constants.py  database.py  logger.py  seed_data.py
